[package]
name = "jlance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lance"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "42.0.0", features = ["pyarrow"] }
arrow-array = "42.0"
arrow-data = "42.0"
arrow-schema = "42.0"
chrono = "0.4.23"
env_logger = "0.10"
futures = "0.3"
jni = "0.21.1"
lance = { path = "../rust" }
log = "0.4"
prost = "0.11"
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.23", features = ["rt-multi-thread"] }
uuid = "1.3.0"

[build-dependencies]
prost-build = "0.11"

